[package]
name = "sudo-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = {git = "https://github.com/Vineta-K/ethers-rs", features = ["ws" , "ipc", "rustls", "abigen"] }
tokio = { version = "1.8", features = ["macros","rt-multi-thread"] }
tokio-stream = "0.1"
gumdrop = "0.8"
serde_json = "1.0"
serde = "1.0"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.27", features = ["bundled", "vtab"] }
rand = "0.8"
reqwest = "0.11"
ethers-flashbots = { git = "https://github.com/Vineta-K/ethers-flashbots" }
futures = "0.3"
parking_lot = "0.12"
url = "2.2"
async-stream = "0.3"